Monograph form/metadata improvements

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,7 @@ en:
         facet:
           resource_type_sim: Format
   book_needs_handles: "Book Needs Handles?"
-  buy_url: "Buy Book URL"
+  buy_url: "Buy Book URL(s)"
   caption: "Caption"
   citable_link: "Citable Link"
   content_type: "Content Type"
@@ -68,8 +68,6 @@ en:
   creator_role: "Creator Role"
   credit_line: "Credit Line"
   date_created: "Date Created"
-  publication_year: "Publication Year" # used on :date_created for Monographs
-  location: "Publication Location"
   date_published: "Date Published"
   display_date: "Date"
   doi: "DOI"
@@ -136,7 +134,8 @@ en:
     index:
       buy: "Buy %{title}"
       buy_book: "Buy Book"
-      can_edit: "Manage Monograph and Files"
+      show_page_button: "Manage Monograph and Files"
+      edit_page_button: "Edit Monograph"
       edited_by: "Edited by %{editors}"
       home: "Home"
       read: "Read %{title}"
@@ -178,7 +177,6 @@ en:
   primary_editor_family_name: "Editor (last name)"
   primary_editor_given_name: "Editor (first name)"
   publisher: "Publisher"
-  citation_publisher: "Citation Publisher"
   redirect_to: "Redirect to"
   resource_type: "Resource Type"
   rights_granted: "Rights Granted"
@@ -196,59 +194,103 @@ en:
   section_title: "Related Section"
   section_titles: "Section Titles"
   simple_form:
-      labels:
-        defaults:
-          allow_display_after_expiration: :"allow_display_after_expiration"
-          allow_download: :"allow_download"
-          allow_download_after_expiration: :"allow_download_after_expiration"
-          allow_hi_res: :"allow_hi_res"
-          alt_text: :"alt_text"
-          book_needs_handles: :"book_needs_handles"
-          buy_url: :"buy_url"
-          caption: :"caption"
-          citable_link: :"citable_link"
-          content_type: :"content_type"
-          contributor: :"contributor"
-          copyright_holder: :"copyright_holder"
-          copyright_status: :"copyright_status"
-          creator_display: :"creator_display"
-          creator_family_name: :"creator_family_name"
-          creator_given_name: :"creator_given_name"
-          credit_line: :"credit_line"
-          date_created: :"date_created"
-          date_published: :"date_published"
-          display_date: :"display_date"
-          doi: :"doi"
-          editor: :"editor"
-          embargo_release_date: :"embargo_release_date"
-          exclusive_to_platform: :"exclusive_to_platform"
-          ext_url_doi_or_handle: :"ext_url_doi_or_handle"
-          external_resource: :"external_resource"
-          hdl: :"hdl"
-          holding_contact: :"holding_contact"
-          isbn: :"isbn"
-          isbn_ebook: :"isbn_ebook"
-          isbn_paper: :"isbn_paper"
-          keywords: :"keywords"
-          lease_expiration_date: :"lease_expiration_date"
-          permissions_expiration_date: :"permissions_expiration_date"
-          press: :"press"
-          primary_creator_role: :"primary_creator_role"
-          primary_editor_given_name: "primary_editor_given_name"
-          primary_editor_family_name: "primary_editor_family_name"
-          resource_type: :"resource_type"
-          rights_granted: :"rights_granted"
-          rights_granted_creative_commons: :"rights_granted_creative_commons"
-          section: :"section"
-          section_title: :"section_title"
-          section_titles: :"section_titles"
-          sort_date: :"sort_date"
-          transcript: :"transcript"
-          translation: :"translation"
-          use_crossref_xml: :"use_crossref_xml"
-      hints:
-        defaults:
-          transcript: "Transcripts must be formatted as WebVTT captions. <a href='https://developer.mozilla.org/en-US/docs/Web/API/WebVTT_API' target='_blank'>Get help with WebVTT formatting.</a>"
+    labels:
+      defaults:
+        allow_display_after_expiration: :"allow_display_after_expiration"
+        allow_download: :"allow_download"
+        allow_download_after_expiration: :"allow_download_after_expiration"
+        allow_hi_res: :"allow_hi_res"
+        alt_text: :"alt_text"
+        book_needs_handles: :"book_needs_handles"
+        buy_url: :"buy_url"
+        caption: :"caption"
+        citable_link: :"citable_link"
+        content_type: :"content_type"
+        contributor: :"contributor"
+        copyright_holder: :"copyright_holder"
+        copyright_status: :"copyright_status"
+        creator_display: :"creator_display"
+        creator_family_name: :"creator_family_name"
+        creator_given_name: :"creator_given_name"
+        credit_line: :"credit_line"
+        date_created: :"date_created"
+        date_published: :"date_published"
+        display_date: :"display_date"
+        doi: :"doi"
+        editor: :"editor"
+        embargo_release_date: :"embargo_release_date"
+        exclusive_to_platform: :"exclusive_to_platform"
+        ext_url_doi_or_handle: :"ext_url_doi_or_handle"
+        external_resource: :"external_resource"
+        hdl: :"hdl"
+        holding_contact: :"holding_contact"
+        isbn: :"isbn"
+        isbn_ebook: :"isbn_ebook"
+        isbn_paper: :"isbn_paper"
+        keywords: :"keywords"
+        lease_expiration_date: :"lease_expiration_date"
+        permissions_expiration_date: :"permissions_expiration_date"
+        press: :"press"
+        primary_creator_role: :"primary_creator_role"
+        primary_editor_given_name: "primary_editor_given_name"
+        primary_editor_family_name: "primary_editor_family_name"
+        resource_type: :"resource_type"
+        rights_granted: :"rights_granted"
+        rights_granted_creative_commons: :"rights_granted_creative_commons"
+        section: :"section"
+        section_title: :"section_title"
+        section_titles: :"section_titles"
+        sort_date: :"sort_date"
+        transcript: :"transcript"
+        translation: :"translation"
+        use_crossref_xml: :"use_crossref_xml"
+      monograph:
+        authorship_metadata:
+          help_html: "Only creator is required"
+          legend_html: "* Authorship Metadata"
+        basic_metadata:
+          help_html: "General metadata for this title"
+          legend_html: "* Basic Metadata"
+        citable_links_metadata:
+          help_html: "Citable links asdfasf asf as fas"
+          legend_html: "Citable Links"
+        citation_publisher: "Citation Publisher"
+        citation_metadata:
+          help_html: "Along with creator, these fields are required for auto-generated citations"
+          legend_html: "* Citation Metadata"
+        date_created: "Publication Year" # used on :date_created for Monographs
+        description: "Description"
+        hyrax_representatives:
+          legend_html: "Hyrax Representatives"
+          media:
+            help_html: "Select the file with media that represents this work (not currently used by Fulcrum)."
+            legend_html: "Media Representative"
+          thumbnail:
+            help_html: "Select the file to be used as the thumbnail for this work."
+            legend_html: "Thumbnail Representative"
+        isbn_metadata:
+          help_html: "ISBNs for this title"
+          legend_html: "ISBNs"
+        language: "Language"
+        location: "Publication Location"
+        required_message: "Field groups marked with * contain required metadata fields."
+        subject: "Subject"
+        title: "Title"
+    hints:
+      defaults:
+        transcript: "Transcripts must be formatted as WebVTT captions. <a href='https://developer.mozilla.org/en-US/docs/Web/API/WebVTT_API' target='_blank'>Get help with WebVTT formatting.</a>"
+      monograph:
+        date_created: "The 4-digit publication year used in auto-generated citations."
+        doi: "A full persistent URL, that can be cited (e.g. http://www.example.com). Takes precedence over default Fulcrum handle."
+        citation_publisher: "The publisher name used in auto-generated citations."
+        creator_display: "An optional free-text field allowing custom authorship display."
+        hdl: "A thing to remove in HELIO-1775"
+        description: "A free-text description of the work (markdown allowed)."
+        language: "The language of the monograph's content."
+        location: "The place name used in auto-generated citations."
+        press: "The monograph's publisher/press on Fulcrum."
+        section_titles: "Used like a table of contents to indicate the order of attached FileSets' \"related sections\"."
+        subject: "Keywords which describe what this monograph is about."
   sort_date: "Sort Date"
   transcript: "Transcript"
   translation: "Translation(s)"
