creator/contributor 1 entry per line

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,9 +62,7 @@ en:
   copyright_status: "Copyright Status"
   creator: "Creator"
   creator_display: "Authorship Display (free-form text)"
-  creator_family_name: "Primary Creator (family name)"
   creator_full_name: "Author"
-  creator_given_name: "Primary Creator (given name)"
   creator_role: "Creator Role"
   credit_line: "Credit Line"
   date_created: "Date Created"
@@ -136,7 +134,6 @@ en:
       buy_book: "Buy Book"
       show_page_button: "Manage Monograph and Files"
       edit_page_button: "Edit Monograph"
-      edited_by: "Edited by %{editors}"
       home: "Home"
       read: "Read %{title}"
       read_book: "Read Book"
@@ -178,9 +175,6 @@ en:
         q:
           label: "Search within %{press_name}"
           placeholder: "Search works"
-  primary_creator_role: "Primary Creator Role(s)"
-  primary_editor_family_name: "Editor (last name)"
-  primary_editor_given_name: "Editor (first name)"
   publisher: "Publisher"
   redirect_to: "Redirect to"
   resource_type: "Resource Type"
@@ -215,14 +209,11 @@ en:
         copyright_holder: :"copyright_holder"
         copyright_status: :"copyright_status"
         creator_display: :"creator_display"
-        creator_family_name: :"creator_family_name"
-        creator_given_name: :"creator_given_name"
         credit_line: :"credit_line"
         date_created: :"date_created"
         date_published: :"date_published"
         display_date: :"display_date"
         doi: :"doi"
-        editor: :"editor"
         embargo_release_date: :"embargo_release_date"
         exclusive_to_platform: :"exclusive_to_platform"
         ext_url_doi_or_handle: :"ext_url_doi_or_handle"
@@ -236,9 +227,6 @@ en:
         lease_expiration_date: :"lease_expiration_date"
         permissions_expiration_date: :"permissions_expiration_date"
         press: :"press"
-        primary_creator_role: :"primary_creator_role"
-        primary_editor_given_name: "primary_editor_given_name"
-        primary_editor_family_name: "primary_editor_family_name"
         resource_type: :"resource_type"
         rights_granted: :"rights_granted"
         rights_granted_creative_commons: :"rights_granted_creative_commons"
@@ -250,8 +238,9 @@ en:
         translation: :"translation"
         use_crossref_xml: :"use_crossref_xml"
       monograph:
+        creator: "Authors"
         authorship_metadata:
-          help_html: "TODO: mention creator is required for citations"
+          help_html: "You must add at least one author for citations"
           legend_html: "* Authorship Metadata"
         basic_metadata:
           help_html: "General metadata for this title"
@@ -278,13 +267,14 @@ en:
           legend_html: "ISBNs"
         language: "Language"
         location: "Publication Location"
-        required_message: "Field groups marked with * contain required metadata fields."
+        required_message: "Field groups marked with * contain required metadata fields (colored red)."
         subject: "Subject"
         title: "Title"
     hints:
       defaults:
         transcript: "Transcripts must be formatted as WebVTT captions. <a href='https://developer.mozilla.org/en-US/docs/Web/API/WebVTT_API' target='_blank'>Get help with WebVTT formatting.</a>"
       monograph:
+        creator: "Enter one citation author per line in the format \"Lastname, Firstname (optional role)\". Omit the comma for institutions etc."
         date_created: "The 4-digit publication year used in auto-generated citations."
         doi: "A full persistent URL, that can be cited (e.g. http://www.example.com). Takes precedence over default Fulcrum handle."
         citation_publisher: "The publisher name used in auto-generated citations."
