--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,7 @@ en:
         updated:   "User role has been updated."
         destroyed: "User role has been removed."
         batch_error: "There was a problem saving the user role(s)."
+  hdl: "Handle"
   holding_contact: "Holding Contact"
   hyrax:
     base:
@@ -214,6 +215,7 @@ en:
         exclusive_to_platform: :"exclusive_to_platform"
         ext_url_doi_or_handle: :"ext_url_doi_or_handle"
         external_resource: :"external_resource"
+        hdl: :"hdl"
         holding_contact: :"holding_contact"
         isbn: :"isbn"
         keywords: :"keywords"
@@ -267,13 +269,14 @@ en:
       defaults:
         transcript: "Transcripts must be formatted as WebVTT captions. <a href='https://developer.mozilla.org/en-US/docs/Web/API/WebVTT_API' target='_blank'>Get help with WebVTT formatting.</a>"
       monograph:
-        creator: "Enter one citation author per line in the format \"Lastname, Firstname (optional role)\". Omit the comma for institutions etc."
-        date_created: "The 4-digit publication year used in auto-generated citations."
-        doi: "A full persistent URL, that can be cited (e.g. http://www.example.com). Takes precedence over default Fulcrum handle."
         citation_publisher: "The publisher name used in auto-generated citations."
+        creator: "Enter one citation author per line in the format \"Lastname, Firstname (optional role)\". Omit the comma for institutions etc."
         creator_display: "An optional free-text field allowing custom authorship display."
-        isbn: "Enter as many ISBN values as you want. Put the format in parentheses if needed, e.g. \"123-123456-1 (e-book)\"."
+        date_created: "The 4-digit publication year used in auto-generated citations."
         description: "A free-text description of the work (markdown allowed)."
+        doi: "https://doi.org/<doi>"
+        hdl: "http://hdl.handle.net/<hdl>"
+        isbn: "Enter as many ISBN values as you want. Put the format in parentheses if needed, e.g. \"123-123456-1 (e-book)\"."
         language: "The language of the monograph's content."
         location: "The place name used in auto-generated citations."
         press: "The monograph's publisher/press on Fulcrum."
