Resolves HELIO-1903, HELIO-1907, and HELIO-1908 Refactor External Resource

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -21,7 +21,6 @@ en:
         content_type_tesim: "Content Type"
         keywords_tesim: "Keywords"
         section_title_tesim: "Section"
-        external_resource_ssim: "External Resource"
         allow_download_ssim: "Allow Download?"
         allow_hi_res_ssim: "Allow Hi-Res?"
         exclusive_to_platform_ssim: "Exclusive to Platform?"
@@ -30,7 +29,7 @@ en:
         allow_download_after_expiration_ssim: "Allow Download After Expiration?"
         credit_line_ssim: "Credit Line"
         holding_contact_ssim: "Holding Contact"
-        ext_url_doi_or_handle_ssim: "External URL/DOI"
+        external_resource_url_ssim: "External Resource URL"
         primary_creator_role_tesim: "Primary Creator Role(s)"
         display_date_tesim: "Display Date"
         sort_date_tesim: "Sort Date"
