--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,8 +88,7 @@ en:
       min_size_error: "File size should be greater than %{min_size}"
       max_size_error: "File size should be less than %{max_size}"
   exclusive_to_platform: "Exclusive to Platform?"
-  ext_url_doi_or_handle: "External URL/DOI"
-  external_resource: "Externally-Hosted Resource?"
+  external_resource_url: "External Resource URL"
   file_format: "File Format"
   file_size: "File Size"
   helpers:
@@ -213,8 +212,7 @@ en:
         doi: :"doi"
         embargo_release_date: :"embargo_release_date"
         exclusive_to_platform: :"exclusive_to_platform"
-        ext_url_doi_or_handle: :"ext_url_doi_or_handle"
-        external_resource: :"external_resource"
+        external_resource_url: :"external_resource_url"
         hdl: :"hdl"
         holding_contact: :"holding_contact"
         isbn: :"isbn"
