add open access fields

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,6 +166,7 @@ en:
       export: "Download"
       preview: "Preview"
       upload: "Upload"
+  open_access: "Open Access?"
   original_checksum: "Original Checksum"
   pageviews_html: "<strong>%{count}</strong> views since %{date}"
   permissions_expiration_date: "Permissions Expiration Date"
@@ -222,6 +223,7 @@ en:
         isbn: :"isbn"
         keywords: :"keywords"
         lease_expiration_date: :"lease_expiration_date"
+        open_access: "Open Access?"
         permissions_expiration_date: :"permissions_expiration_date"
         press: :"press"
         resource_type: :"resource_type"
