--- a/config/locales/heliotrope.en.yml
+++ b/config/locales/heliotrope.en.yml
@@ -124,6 +124,10 @@ en:
         REQUIRED FOR FULCRUM
 
         Using the drop-down list, select the copyright status of the item.
+      open_access: |
+        Indicate if this item is "open access". Allowed values: Yes/No, but "No" is the default and need not be entered.
+      funder: |
+        The person(s) or organization funding an open access item. Free text.
       allow_hi_res: |
         REQUIRED FOR FULCRUM
 
