HELIO-2321: full DOI url in CSV

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -255,8 +255,8 @@ en:
         creator_display: "An optional free-text field allowing custom authorship display."
         date_created: "The 4-digit publication year used in auto-generated citations."
         description: "A free-text description of the work (markdown allowed)."
-        doi: "https://doi.org/<doi>"
-        hdl: "https://hdl.handle.net/<hdl>"
+        doi: "https://doi.org/ is automatically prepended"
+        hdl: "https://hdl.handle.net/&lthdl&gt;"
         isbn: "Enter as many ISBN values as you want. Put the format in parentheses if needed, e.g. \"123-123456-1 (e-book)\"."
         language: "The language of the monograph's content."
         location: "The place name used in auto-generated citations."
