--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -7,6 +7,8 @@ en:
     base:
       items:
         set_representative: "Set Representative"
+    directory:
+      suffix: ""
     monographs:
       show:
         last_modified: "Last Modified"
