HELIO-2473, HELIO-2474 search box changes * Change search box in navigation bar to search Publisher's works (not within the monograph) * Add FileSet Search to Resource Tab and change FileSet labels to use Resources * When interacting with resources/file_sets, focus the window on the resources

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -4,7 +4,7 @@ en:
 
     search:
       facets:
-        title: 'Filter materials'
+        title: 'Search and Filter Resources'
       fields:
         date_published_tesim: "Date Published"
         isbn_tesim: "ISBN (Hardcover)"
