--- a/config/locales/heliotrope.en.yml
+++ b/config/locales/heliotrope.en.yml
@@ -340,7 +340,7 @@ en:
       representative_kind: |
         Use this to assign a FileSet as one of its Monograph's "representatives".
         Allowed representative values (as of 20181026) are:
-        epub, webgl, database, aboutware, pdf_ebook, mobi, reviews, related, peer_review and cover
+        epub, webgl, database, aboutware, pdf_ebook, mobi, reviews, related, peer_review, map and cover
 
         You must ensure that the file is of an appropriate type to be used as the relevant representative:
         -- epub: *.epub (archive file)
@@ -352,4 +352,5 @@ en:
         -- reviews: *.html file
         -- related: *.html file
         -- peer_review: *.html file
+        -- map: *.zip (archive file)
         -- cover: image file like *.jpg (not JPG 2000), *.tiff, *.png
