--- a/fulcrum/mozilla-pdf-viewer/web/locale/en-ZA/viewer.properties
+++ b/fulcrum/mozilla-pdf-viewer/web/locale/en-ZA/viewer.properties
@@ -93,8 +93,8 @@ document_properties_close=Close
 # tooltips)
 toggle_sidebar.title=Toggle Sidebar
 toggle_sidebar_label=Toggle Sidebar
-document_outline.title=Show Document Outline (double-click to expand/collapse all items)
-document_outline_label=Document Outline
+document_outline.title=Show Table of Contents (double-click to expand/collapse all items)
+document_outline_label=Table of Contents
 attachments.title=Show Attachments
 attachments_label=Attachments
 thumbs.title=Show Thumbnails
