HELIO-3094 Edit Work 'translation missing: en.hyrax.institution_name'

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -9,6 +9,7 @@ en:
         set_representative: "Set Representative"
     directory:
       suffix: ""
+    institution_name: "University of Michigan"
     monographs:
       show:
         last_modified: "Last Modified"
