HELIO-3199 - change background color of breadcrumbs to match; modify label for pub. catalog in breadcrumbs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,7 +136,7 @@ en:
     index:
       buy: "Buy a print copy of %{title}"
       buy_book: "Buy Book"
-      catalog: "Catalog"
+      catalog: "Books"
       download: "Download %{title}"
       download_book: "Download"
       show_page_button: "Manage Monograph and Files"
