--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,6 +44,7 @@ en:
   allow_hi_res: "Allow Hi-Res?"
   alt_text: "Alternative Text"
   author: "Author"
+  bar_number: "BAR Number"
   blacklight:
     search:
       fields:
