--- a/config/locales/heliotrope.en.yml
+++ b/config/locales/heliotrope.en.yml
@@ -129,7 +129,9 @@ en:
       open_access: |
         Indicate if this item is "open access". Allowed values: Yes/No, but "No" is the default and need not be entered.
       funder: |
-        The person(s) or organization funding an open access item. Free text.
+        The person(s) or organization funding an open access item e.g. Andrew W. Mellon Foundation
+      funder_display: |
+        Text displayed on open access item page in recognition of funder e.g. Made possible by a generous grant from the Andrew W. Mellon Foundation.
       allow_hi_res: |
         REQUIRED FOR FULCRUM
 
